[project]
name = "mo-4"
version = "0.1.0"
description = "Stochastic Optimization Methods Lab"
authors = [
    {name = "Gemini Assistant",email = "gemini@google.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^2.3.0"
matplotlib = "^3.10.3"
pandas = "^2.3.0"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "C90", "N", "D"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

